# LVGL_UI_Creator

./: .gitignore  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  UICreator.sln
CodeGeneration/: ResultItem.h  (+6 more)
UICreator/: CMakeLists.txt  FontDsc.json  ObjectUserData.h  README.md  UICreator.vcxproj  UICreator.vcxproj.filters  config.h  custom_widget.c  custom_widget.h  dataset.c  dataset.h  gencode.c  gencode.h  interface.c  interface.h  json.txt  loadproj.c  loadproj.h  main.c  main.cpp  mouse_cursor_icon.c  saveproj.c  saveproj.h  setting.c  setting.h  toolbox.c  toolbox.h
UICreator/Fonts/: FTFont.cpp  FTFont.h
UICreator/ObjectCreation/: Arc.cpp  Arc.h  Bar.cpp  Bar.h  Button.cpp  Button.h  ButtonMatrix.cpp  ButtonMatrix.h  Calendar.cpp  Calendar.h  Canvas.cpp  Canvas.h  Chart.cpp  Chart.h  CheckBox.cpp  CheckBox.h  Container.cpp  Container.h
UICreator/Serialization/: Area.h  JsonDoc.cpp  JsonDoc.h  LVArc.cpp  LVArc.h  LVBar.cpp  LVBar.h  LVButton.cpp  LVButton.h  LVButtonMatrix.cpp  LVButtonMatrix.h  LVCalendar.cpp  LVCalendar.h  LVFont.cpp  LVFont.h  LVFontDsc.cpp  LVFontGlyphDsc.cpp  LVFontKernDSC.cpp  LVLabel.h  LVObject.cpp  LVObject.h  Screen.cpp  Screen.h  Style.cpp  Style.h
UICreator/UICreator/: UICreator.vcxproj  UICreator.vcxproj.filters  custom_widget.c  lv_drv_conf.h  mouse_cursor_icon.c  toolbox.c
UICreator/UICreator/Serialization/: JsonDoc.cpp  LVLabel.cpp  Realign.h
UICreator/Utils/: ObjectTools.cpp  ObjectTools.h
UICreator/Variable/: Variable.cpp  Variable.h
UICreator/Widgets/: CollapsableWindow.cpp  CollapsableWindow.h  CollapsableWindowManager.cpp  CollapsableWindowManager.h  ColorPicker.cpp  ColorPicker.h  FileBrowser.cpp  FileBrowser.h  ListBox.cpp  ListBox.h  MinimizableWindow.cpp  MinimizableWindow.h  TreeNode.cpp  TreeNode.h  TreeNodeV1.cpp  TreeNodeV1.h  TreeView.cpp  TreeView.h  TreeViewV1.cpp  TreeViewV1.h
UICreator/Windows/: PropertySelection.cpp  PropertySelection.h  PropertyWindow.cpp  PropertyWindow.h  SimWindow.cpp  SimWindow.h  Themes.h  ToolBar.cpp  ToolBar.h  ToolTray.cpp  ToolTray.h  UI.cpp  UI.h  UIObjectData.h  VariableCreateWindow.cpp  VariableCreateWindow.h
(+104 files in other folders)
